# Change Log
All notable changes to this project will be documented in this file.


## [0.6.3] - 2017-20-03

### Added
 
 - Excel#new : options :calculation, :screen_updating

## [0.6.2] - 2016-04-11

### Changed
- Excel#focus (was Excel#activate)
- Book#focus (was Book#activate)

### Added

## [0.6.1] - 2016-04-09

### Changed
- error classes

### Added

- Excel#foremost_window

## [0.6] - 2016-03-08

## [0.5.2] - 2016-17-07

### Changed
- Book: open: option :update_links
- Book: open: options :default_excel, :force_excel => :current instead of :reuse
  (:active, :reuse as alias)
- Book: open: options: deleted :displayalerts
- Excel: create, current: with options :visible, :displayalerts

### Added
- Excel: create, current, new: new options-value :displayalerts => :if_visible

## [0.5.1] - 2016-18-06

### Added
- Book#open :force_excel => :active
- Excel#workbooks_visible

### Changed
- Book: open: :default_excel, :force_excel => :active, (:reuse as alias), bug fix in :default
		unobtrusively: :if_closed => :active (:reuse as alias)
- Excel: with_calculation: bug fix
- Sheet: [], []= broader implementation


## [0.5.0] - 2016-31-05

### Added
- Book: sheet, add_empty_sheet, copy_sheet
		rangeval, set_rangeval, nameval, set_nameval
		open: option check_compatibility
- Sheet: last_sheet, first_sheet, rangeval, nameval, [], []=
- Excel: with_calculaiton, rangeval, set_rangeval, nameval, set_nameval, [], []=

### Changed
- Book: book.sheet(<sheet_name>) replaces book[<sheet-name>]
        add_or_copy_sheet replaces add_sheet
        name_val, set_name_val replaces n_value, set_n_value
        [], []= via nameval, set_nameval

       
## [0.4] - 2016-03-16

### Added
- options visible, displayalerts in unobtrusively, for_reading, for_writing

## [0.3.8] - 2016-02-12

### Added
 - mark down comments
 - trace
 - Excel, Book: respond_to?, methods, special_methods, special_methods 

## [0.3.9] - 2016-03-03

### Added