@@ -556,7 +556,7 @@ Providing all Excel instances (opened via RobustExcelOle) as objects of the clas
 
 You can set the calculation mode of an Excel instance to manual or automatic.
 
-  excel.set_calculation :manual
+  excel.calculation = :manual
 
 You can do it in a block:
 
