@@ -7,6 +7,8 @@ All notable changes to this project will be documented in this file.
 ### Added
  
  - Excel#new : options :calculation, :screen_updating
+ - Excel#calculation
+ - Excel#screen_updating
 
 ## [0.6.2] - 2016-04-11
 
